<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_8dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/account_update_full_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_4dp"
                android:ems="10"
                android:hint="@string/enter_title"
                android:inputType="textCapWords"
                android:textColorHint="@color/colorAccent" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/account_update_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_4dp"
                android:ems="10"
                android:hint="@string/enter_price_in"
                android:inputType="numberDecimal"
                android:textColorHint="@color/colorAccent" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/account_update_phone_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_4dp"
                android:ems="10"
                android:hint="@string/quantity"
                android:inputType="number"
                android:textColorHint="@color/colorAccent" />

        </android.support.design.widget.TextInputLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_16dp">


            <TextView
                android:id="@+id/preview_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:gravity="center_horizontal"
                android:text="@string/preview"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_dimens_22sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/add_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/preview"
                android:background="@drawable/shape"
                android:text="@string/upload_image"
                android:textColor="@color/colorAccent" />


            <ImageView
                android:id="@+id/preview"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@id/preview_text"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:scaleType="centerCrop"
                android:src="@color/ColorBlack"
                tools:src="@drawable/ic_plant" />


            <Button
                android:id="@+id/add_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/add_image"
                android:layout_marginBottom="@dimen/dimen_8dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:background="@drawable/shape"
                android:text="@string/submit"
                android:textColor="@color/colorAccent" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>