<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".LoginActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardView.Light"
        app:cardElevation="4dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            app:srcCompat="@drawable/ic_plant"
            android:contentDescription="@string/app_logo" />
        </LinearLayout>

    </android.support.v7.widget.CardView>




    <LinearLayout
        android:id="@+id/sign_in_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/banner"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimens_32dp"
        >

        <include
            layout="@layout/divider"
            android:layout_weight="1"
            android:layout_height="1dp"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_str"
            android:layout_margin="4dp"
            android:textStyle="bold"
            android:textColor="@color/ColorBlack"
            android:textSize="@dimen/text_dimens_22sp"
            />

        <include
            layout="@layout/divider"
            android:layout_weight="1"
            android:layout_height="1dp"
            android:layout_width="0dp"
            android:layout_margin="8dp"
            android:layout_gravity="center"/>

    </LinearLayout>



<LinearLayout
    android:id="@+id/form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_below="@+id/sign_in_text_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/shape"
        android:layout_marginTop="@dimen/dimens_32dp"
        android:layout_marginStart="@dimen/dimens_32dp"
        android:layout_marginEnd="@dimen/dimens_32dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/email"
            android:contentDescription="@string/email" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textColorHint="@color/ColorBlack"
            android:textColor="@color/ColorBlack"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/shape"
        android:layout_marginTop="@dimen/dimens_32dp"
        android:layout_marginLeft="@dimen/dimens_32dp"
        android:layout_marginStart="@dimen/dimens_32dp"
        android:layout_marginEnd="@dimen/dimens_32dp"
       >


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/lock"
            android:contentDescription="@string/email" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword"
            android:hint="@string/password"
            android:textColorHint="@color/ColorBlack"
            android:textColor="@color/ColorBlack"
            />
    </LinearLayout>

    <Button
        android:id="@+id/submit_btn"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/shape"
        android:text="@string/sign_in_btn_str"
        android:textColor="@color/ColorBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

      <Button
        android:id="@+id/create_account"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/shape"
        android:text="Create Account"
        android:textColor="@color/ColorBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>




</RelativeLayout>