<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <android.support.v7.widget.CardView
        android:id="@+id/banner"
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:contentDescription="@string/app_logo"
                app:srcCompat="@drawable/ic_plant" />

        </LinearLayout>


    </android.support.v7.widget.CardView>


    <LinearLayout
        android:id="@+id/sign_in_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/banner"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <include
            layout="@layout/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/sign_up_now"
            android:textColor="@color/ColorBlack"
            android:textSize="@dimen/text_dimens_22sp"
            android:textStyle="bold" />

        <include
            layout="@layout/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_weight="1" />

    </LinearLayout>


        <LinearLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="460dp"
            android:layout_below="@+id/sign_in_text_layout"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="@dimen/dimens_32dp"
                android:layout_marginStart="@dimen/dimens_32dp"
                android:background="@drawable/shape"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/email"
                    app:srcCompat="@drawable/account" />

                <!-- TODO add hint_str to all hint strings -->

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/sign_up_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/sign_up_name_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:ems="10"
                        android:hint="@string/full_name_hint"
                        android:inputType="textCapWords"
                        android:textColorHint="@color/colorAccent" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="@dimen/dimens_32dp"
                android:layout_marginStart="@dimen/dimens_32dp"
                android:background="@drawable/shape"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/email"
                    app:srcCompat="@drawable/email" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/sign_up_email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/sign_up_email_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:ems="10"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@color/colorAccent" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="@dimen/dimens_32dp"
                android:layout_marginStart="@dimen/dimens_32dp"
                android:background="@drawable/shape"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/email"
                    app:srcCompat="@drawable/phone" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/sign_up_phone_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/sign_up_phone_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:ems="10"
                        android:hint="@string/phone_hint"
                        android:inputType="phone"
                        android:textColorHint="@color/colorAccent" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="@dimen/dimens_32dp"
                android:layout_marginStart="@dimen/dimens_32dp"
                android:background="@drawable/shape"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/email"
                    app:srcCompat="@drawable/lock" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/sign_up_password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorAccent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/sign_up_password_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:textColorHint="@color/colorAccent" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="@dimen/dimens_32dp"
                android:layout_marginStart="@dimen/dimens_32dp"
                android:background="@drawable/shape"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/email"
                    app:srcCompat="@drawable/lock" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/sign_up_reenter_password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorAccent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password_conform_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/confirm_password_hint_str"
                        android:inputType="textPassword"
                        android:textColorHint="@color/colorAccent" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/sign_up_login_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/already_have_account"
                android:textColor="#212121"
                android:textSize="16sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/shape"
                android:text="@string/sign_up_now"
                android:textColor="@color/ColorBlack" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>